[gd_scene load_steps=8 format=3 uid="uid://c2pbxjvlt7den"]

[ext_resource type="Script" path="res://addons/debug_console/console_ui/console_ui.gd" id="1_4d4ab"]
[ext_resource type="FontFile" uid="uid://c6ior61knt1fx" path="res://addons/debug_console/console_ui/fonts/RobotoMono-Regular.ttf" id="2_r51cm"]
[ext_resource type="FontFile" uid="uid://l1ljjagpvplk" path="res://addons/debug_console/console_ui/fonts/RobotoMono-Bold.ttf" id="3_x2dns"]
[ext_resource type="FontFile" uid="uid://bcafaacjxols3" path="res://addons/debug_console/console_ui/fonts/RobotoMono-Italic.ttf" id="4_kqhf6"]
[ext_resource type="FontFile" uid="uid://bhv3b1vkcvqy1" path="res://addons/debug_console/console_ui/fonts/RobotoMono-BoldItalic.ttf" id="5_kndp4"]
[ext_resource type="Script" path="res://addons/debug_console/console_ui/components/enter_button.gd" id="6_iu3pc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yp0bh"]
resource_local_to_scene = false
resource_name = ""
content_margin_left = -1.0
content_margin_top = -1.0
content_margin_right = -1.0
content_margin_bottom = -1.0
bg_color = Color(0, 0, 0, 0.501961)
draw_center = true
skew = Vector2(0, 0)
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color(0.8, 0.8, 0.8, 1)
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_top = 0.0
expand_margin_right = 0.0
expand_margin_bottom = 0.0
shadow_color = Color(0, 0, 0, 0.6)
shadow_size = 0
shadow_offset = Vector2(0, 0)
anti_aliasing = true
anti_aliasing_size = 1.0

[node name="ConsoleUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4d4ab")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 124

[node name="ConsoleUIRoot" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundPanel" type="Panel" parent="CanvasLayer/ConsoleUIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yp0bh")

[node name="ConsoleMargin" type="MarginContainer" parent="CanvasLayer/ConsoleUIRoot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="ConsoleVerticalContainer" type="VBoxContainer" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin"]
layout_mode = 2

[node name="BottomBarMargin" type="MarginContainer" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin/ConsoleVerticalContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="OutputText" type="RichTextLabel" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin/ConsoleVerticalContainer/BottomBarMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/normal_font = ExtResource("2_r51cm")
theme_override_fonts/bold_font = ExtResource("3_x2dns")
theme_override_fonts/italics_font = ExtResource("4_kqhf6")
theme_override_fonts/bold_italics_font = ExtResource("5_kndp4")
theme_override_font_sizes/normal_font_size = 24
theme_override_font_sizes/bold_font_size = 24
theme_override_font_sizes/italics_font_size = 24
theme_override_font_sizes/bold_italics_font_size = 24
theme_override_font_sizes/mono_font_size = 24
bbcode_enabled = true
scroll_following = true

[node name="BottomBarHorizontalContainer" type="HBoxContainer" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin/ConsoleVerticalContainer"]
layout_mode = 2

[node name="TextInput" type="LineEdit" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin/ConsoleVerticalContainer/BottomBarHorizontalContainer"]
_import_path = NodePath("")
unique_name_in_owner = true
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
visible = true
modulate = Color(1, 1, 1, 1)
self_modulate = Color(1, 1, 1, 1)
show_behind_parent = false
top_level = false
clip_children = 0
light_mask = 1
visibility_layer = 1
z_index = 0
z_as_relative = true
y_sort_enabled = false
texture_filter = 0
texture_repeat = 0
material = null
use_parent_material = false
clip_contents = false
custom_minimum_size = Vector2(0, 0)
layout_direction = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 1.0
auto_translate = true
localize_numeral_system = true
tooltip_text = ""
focus_neighbor_left = NodePath("")
focus_neighbor_top = NodePath("")
focus_neighbor_right = NodePath("")
focus_neighbor_bottom = NodePath("")
focus_next = NodePath("")
focus_previous = NodePath("")
focus_mode = 2
mouse_filter = 0
mouse_force_pass_scroll_events = true
mouse_default_cursor_shape = 1
theme = null
theme_type_variation = &""
theme_override_fonts/font = ExtResource("2_r51cm")
theme_override_font_sizes/font_size = 24
text = ""
placeholder_text = "> Enter a command..."
alignment = 0
max_length = 0
editable = true
expand_to_text_length = false
context_menu_enabled = true
virtual_keyboard_enabled = true
virtual_keyboard_type = 0
clear_button_enabled = true
shortcut_keys_enabled = true
middle_mouse_paste_enabled = true
selecting_enabled = true
deselect_on_focus_loss_enabled = true
drag_and_drop_selection_enabled = true
right_icon = null
flat = false
draw_control_chars = false
select_all_on_focus = false
caret_blink = true
caret_blink_interval = 0.3
caret_column = 0
caret_force_displayed = false
caret_mid_grapheme = false
secret = false
secret_character = "â€¢"
text_direction = 0
language = ""
structured_text_bidi_override = 0
structured_text_bidi_override_options = []
script = null

[node name="Control" type="Control" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin/ConsoleVerticalContainer/BottomBarHorizontalContainer"]
custom_minimum_size = Vector2(5, 2.08165e-12)
layout_mode = 2

[node name="EnterButton" type="Button" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin/ConsoleVerticalContainer/BottomBarHorizontalContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_r51cm")
theme_override_font_sizes/font_size = 24
disabled = true
text = "Submit"
script = ExtResource("6_iu3pc")

[node name="CloseButton" type="Button" parent="CanvasLayer/ConsoleUIRoot/ConsoleMargin"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_r51cm")
theme_override_font_sizes/font_size = 24
text = "Close Console"
